--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@
 MONGO_URL=mongodb://localhost:27017
 DATABASE_NAME=aurayouth
 PORT=8000
-SECRET_KEY=1StapgbGb3rUFFKBXb-HGveoOMlZ4Zian5shEXuQKcs
+SECRET_KEY=
 DEBUG=True
