--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ DATABASE_NAME=aurayouth
 PORT=8000
 SECRET_KEY=
 DEBUG=True
-GEMINI_API_KEY=
+GEMINI_API_KEY=AIzaSyARfY2IVoQ-h4vDJBDR5P4LtjgRlx4hFZk
 
